# python-playbook

./: LICENSE  README.md  pyproject.toml  python_async_io.py
Async/: python_async_io.ipynb
langchain-pdf-chat-free-llm-and-embeddings/: app.py  requirements.txt
