[project]
name = "python-playbook"
version = "0.1.0"
description = ""
authors = [
    {name = "Stephen Nwankwo",email = "nwankwostephen039@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
